--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,17 @@
   "projects": {
     "project19": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "skipTests": true,
+          "style": "scss"
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        }
+        
+        
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -32,7 +42,7 @@
               "src/styles.scss"
             ],
             "scripts": [
-
+              "./node_modules/flowbite/dist/flowbite.min.js"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -94,7 +104,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           }
